--- a/FrogDate.SPA/src/app/value/value.component.html
+++ b/FrogDate.SPA/src/app/value/value.component.html
@@ -1,3 +1,4 @@
+<head><script src="https://kit.fontawesome.com/c433d548f3.js" crossorigin="anonymous"></script></head>
 <p *ngFor="let value of values">
   {{value.id}} - {{value.name}}
 </p>
