--- a/FrogDate.SPA/src/app/nav/nav.component.html
+++ b/FrogDate.SPA/src/app/nav/nav.component.html
@@ -15,11 +15,25 @@
         <li class="nav-item">
           <a class="nav-link disabled">Messages</a>
         </li>
+        <li class="nav-item" *ngIf="loggedIn()" (click)="loggedOut()">
+          <a class="nav-link disabled">Wyloguj</a>
+        </li>
       </ul>
-      <form #loginForm="ngForm" class="d-flex" role="search" (ngSubmit)="login()">
+      <div class="dropdown" *ngIf="loggedIn()">
+        <a class="dropdown-toggle text-light">
+          Witaj towarzyszu!
+        </a>
+      
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edytuj dane</a></li>
+          <li class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
+        </ul>
+      </div>
+      <form #loginForm="ngForm" class="d-flex" role="search" (ngSubmit)="login()" *ngIf="!loggedIn()">
         <input class="form-control me-2" type="search" placeholder="username" [(ngModel)]="model.username" name="username" required>
         <input class="form-control me-2" type="search" placeholder="password" [(ngModel)]="model.password" name="password" required>
-        <button class="btn btn-outline-success" type="submit">login</button>
+        <button class="btn btn-outline-success" type="submit">Login</button>
       </form>
     </div>
   </div>
