--- a/FrogDate.SPA/src/app/nav/nav.component.html
+++ b/FrogDate.SPA/src/app/nav/nav.component.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">FROGDATE</a>
+    <a class="navbar-brand" [routerLink]="['/home']">FROGDATE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Users</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link active" aria-current="page" [routerLink]="['/users']"  >Users</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Liked</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/liked']" >Liked</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Messages</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/messages']" >Messages</a>
         </li>
         <li class="nav-item" *ngIf="loggedIn()" (click)="loggedOut()">
-          <a class="nav-link disabled">Wyloguj</a>
+          <a class="nav-link">Wyloguj</a>
         </li>
       </ul>
       <div class="dropdown" *ngIf="loggedIn()">
