--- a/FrogDate.SPA/src/app/nav/nav.component.html
+++ b/FrogDate.SPA/src/app/nav/nav.component.html
@@ -1,38 +1,48 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['/home']">FROGDATE</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link active" aria-current="page" [routerLink]="['/users']"  >Users</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/liked']" >Liked</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/messages']" >Messages</a>
-        </li>
-        <li class="nav-item" *ngIf="loggedIn()" (click)="loggedOut()">
-          <a class="nav-link">Wyloguj</a>
-        </li>
-      </ul>
-      <div class="dropdown" *ngIf="loggedIn()">
-        <a class="dropdown-toggle text-light">
-          Witaj {{authService.decodedToken?.unique_name |titlecase}}!
-        </a>
-      
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edytuj dane</a></li>
-          <li class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
+    <div >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" *ngIf="loggedIn()" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/users']">Users</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['/liked']">Liked</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['/messages']">Messages</a>
+          </li>
+          <li class="nav-item" *ngIf="loggedIn()" (click)="loggedOut()">
+            <a class="nav-link">Wyloguj</a>
+          </li>
         </ul>
+        <div class="dropdown" *ngIf="loggedIn()">
+          <a class="dropdown-toggle text-light">
+            Witaj {{ authService.decodedToken?.unique_name | titlecase }}!
+          </a>
+
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edytuj dane</a>
+            </li>
+            <li class="dropdown-divider"></li>
+            <li>
+              <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Wyloguj</a>
+            </li>
+          </ul>
+        </div>
       </div>
+
       <form #loginForm="ngForm" class="d-flex" role="search" (ngSubmit)="login()" *ngIf="!loggedIn()">
-        <input class="form-control me-2" type="search" placeholder="username" [(ngModel)]="model.username" name="username" required>
-        <input class="form-control me-2" type="search" placeholder="password" [(ngModel)]="model.password" name="password" required>
+        <input class="form-control me-2" type="search" placeholder="username" [(ngModel)]="model.username"
+          name="username" required />
+        <input class="form-control me-2" type="search" placeholder="password" [(ngModel)]="model.password"
+          name="password" required />
         <button class="btn btn-outline-success" type="submit">Login</button>
       </form>
     </div>
