Added UserCard,userList ,ErrorInterceptor(wip)

--- a/FrogDate.SPA/src/app/app.component.html
+++ b/FrogDate.SPA/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<div class="d-flex p-2 bd-highlight ">
+    <div class="p-2 bd-highlight"><app-nav></app-nav></div>
+  </div>
+  <div class="d-flex p-2 bd-highlight">
+    <div class="p-2 bd-highlight"><router-outlet></router-outlet></div>
+  </div>
+
