--- a/FrogDate.SPA/src/app/nav/nav.component.html
+++ b/FrogDate.SPA/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-primary fixed-top bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['/home']">FROGDATE</a>
     <div >
@@ -17,22 +17,19 @@
           <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['/messages']">Messages</a>
           </li>
-          <li class="nav-item" *ngIf="loggedIn()" (click)="loggedOut()">
-            <a class="nav-link">Wyloguj</a>
-          </li>
         </ul>
-        <div class="dropdown" *ngIf="loggedIn()">
-          <a class="dropdown-toggle text-light">
+        <div class="dropdown" dropdown *ngIf="loggedIn()">
+          <a class="dropdown-toggle text-light" dropdownToggle>
             Witaj {{ authService.decodedToken?.unique_name | titlecase }}!
           </a>
 
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu mt-4" *bsDropdownMenu >
             <li>
               <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edytuj dane</a>
             </li>
             <li class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Wyloguj</a>
+              <a class="dropdown-item" (click)="loggedOut()"><i class="fa fa-sign-out"></i>Wyloguj</a>
             </li>
           </ul>
         </div>
