--- a/FrogDate.SPA/src/styles.css
+++ b/FrogDate.SPA/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/bootstrap/dist/css/bootstrap-grid.min.css';
 @import '../node_modules/alertifyjs/build/css/alertify.min.css'; 
+@import '../node_modules/bootswatch/dist/cerulean/bootstrap.min.css';
