--- a/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
@@ -1,7 +1,61 @@
-<div class="card" style="width: 18rem;">
-  <img src="{{user.photoUrl}}" class="card-img-top" alt="{{user.username}}">
+<div class="card" style="width: 18rem">
+  <img
+    src="{{ user.photoUrl }}"
+    class="card-img-top"
+    alt="{{ user.username }}"
+  />
+  <ul class="list-inline text-center user-icons animate">
+    <li class="list-inline-item ">
+      <button class="btn btn-warning">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-heart-half"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M8 2.748v11.047c3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"
+          />
+        </svg>
+      </button>
+    </li>
+    <li class="list-inline-item ">
+      <button class="btn btn-warning">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-person-fill"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
+          />
+        </svg>
+      </button>
+    </li>
+    <li class="list-inline-item ">
+      <button class="btn btn-warning">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-send"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"
+          />
+        </svg>
+      </button>
+    </li>
+  </ul>
   <div class="card-body">
-    <h5 class="card-title">{{user?.username}}, {{user?.age}}</h5>
-    <p class="card-text">{{user?.zodiacSign}}</p>
+    <h5 class="card-title">{{ user?.username }}, {{ user?.age }}</h5>
+    <p class="card-text">{{ user?.zodiacSign }}</p>
   </div>
 </div>
