adds banners implemented

--- a/FrogDate.SPA/src/app/users/user-list/user-list.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-list.component.html
@@ -1,12 +1,17 @@
 <div class="d-flex p-2 bd-highlight">
-  <div class="p-2 bd-highlight">REKLAMA_RAKLAMA_REKLAMA_REKLAMA</div>
+  <div class="p-2 bd-highlight">
+    <a href="https://plnts.com/en">
+      <img src="../../../assets/HorizontalBanner.PNG" alt="ADDS">
+    </a>
+  </div>
 </div>
 
 <div class="d-flex p-2 bd-highlight">
-  <div class="p-2 w-100 bd-highlight"></div>
   <div class="p-2 flex-shrink-1 bd-highlight">
-    REKLAMA_REKLAMA REKLAMA_REKLAMA REKLAMA_REKLAMA REKLAMA_REKLAMA
-    REKLAMA_REKLAMA REKLAMA_REKLAMA REKLAMA_REKLAMA REKLAMA_REKLAMA
+    <a href="https://en.wikipedia.org/wiki/French_cuisine">
+      <img src="../../../assets/VerticalBanner.PNG" alt="ADDS">
+    </a>
+
   </div>
   <div class="p-2 bd-highlight">
     <div class="d-flex flex-wrap">
