--- a/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
@@ -22,7 +22,7 @@
       </button>
     </li>
     <li class="list-inline-item ">
-      <button class="btn btn-warning">
+      <button class="btn btn-warning" [routerLink]="['/users/',user.id]" routerLinkActive="router-link-active" >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="16"
