--- a/FrogDate.SPA/src/app/nav/nav.component.html
+++ b/FrogDate.SPA/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
 
           <ul class="dropdown-menu mt-4" *bsDropdownMenu >
             <li>
-              <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edytuj dane</a>
+              <a class="dropdown-item" [routerLink]="['/edit']"><i class="fa fa-user"></i>Edytuj dane</a>
             </li>
             <li class="dropdown-divider"></li>
             <li>
