photo-component and ng2-file-upload implemented

--- a/FrogDate.SPA/src/app/users/user-list/user-edit/user-edit.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-edit/user-edit.component.html
@@ -205,7 +205,7 @@
         </tab>
         <tab heading="Picture gallery">
           <div>
-            <!-- <gallery [items]="images"></gallery> -->
+            <app-photos [photos]="user.photos"></app-photos>
           </div>
         </tab>
       </tabset>
