Problem with e401 when try to upload photo in SPA

--- a/FrogDate.SPA/src/app/users/photos/photos.component.css
+++ b/FrogDate.SPA/src/app/users/photos/photos.component.css
@@ -4,6 +4,10 @@ img.img-thumbnail{
   margin-bottom:2px
 }
 .btn {
-  width:50px;
+  min-width:50px;
   height: 50px;
+}
+.nv-file-over{
+  border: 2px;
+  border-color: blue;
 }
