--- a/FrogDate.SPA/src/app/users/photos/photos.component.html
+++ b/FrogDate.SPA/src/app/users/photos/photos.component.html
@@ -37,7 +37,7 @@
       [ngClass]="{ 'nv-file-over': hasBaseDropZoneOver }"
       (fileOver)="fileOverBase($event)"
       [uploader]="uploader"
-      class="well my-drop-zone"
+      class="card bg-faded p-3 text-center my-drop-zone"
     >
       Base drop zone
     </div>
@@ -46,18 +46,14 @@
     <input type="file" ng2FileSelect [uploader]="uploader" />
   </div>
 
-  <div class="col-md-9" style="margin-bottom: 40px">
+  <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader.queue.length">
     <h3>Upload queue</h3>
-    <p>Queue length: {{ uploader?.queue?.length }}</p>
 
     <table class="table">
       <thead>
         <tr>
           <th width="50%">Name</th>
           <th>Size</th>
-          <th>Progress</th>
-          <th>Status</th>
-          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -116,54 +112,7 @@
         </tr>
       </tbody>
     </table>
-
     <div>
-      <div>
-        Queue progress:
-        <div class="progress" style="">
-          <div
-            class="progress-bar"
-            role="progressbar"
-            [ngStyle]="{ width: uploader.progress + '%' }"
-          ></div>
-        </div>
-      </div>
-      <button
-        type="button"
-        class="btn btn-success btn-s"
-        (click)="uploader.uploadAll()"
-        [disabled]="!uploader.getNotUploadedItems().length"
-      >
-        <span class="glyphicon glyphicon-upload"></span> Upload all
-      </button>
-      <button
-        type="button"
-        class="btn btn-warning btn-s"
-        (click)="uploader.cancelAll()"
-        [disabled]="!uploader.isUploading"
-      >
-        <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-      </button>
-      <button
-        type="button"
-        class="btn btn-danger btn-s"
-        (click)="uploader.clearQueue()"
-        [disabled]="!uploader.queue.length"
-      >
-        <span class="glyphicon glyphicon-trash"></span> Remove all
-      </button>
-    </div>
   </div>
 </div>
 
-<br /><br />
-<div class="row">
-  <div class="col-md-12">
-    <div class="panel panel-default">
-      <div class="panel-heading">Response</div>
-      <div class="panel-body">
-        {{ response }}
-      </div>
-    </div>
-  </div>
-</div>
