--- a/FrogDate.SPA/src/app/users/photos/photos.component.html
+++ b/FrogDate.SPA/src/app/users/photos/photos.component.html
@@ -46,7 +46,11 @@
     <input type="file" ng2FileSelect [uploader]="uploader" />
   </div>
 
-  <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader.queue.length">
+  <div
+    class="col-md-9"
+    style="margin-bottom: 40px"
+    *ngIf="uploader.queue.length"
+  >
     <h3>Upload queue</h3>
 
     <table class="table">
@@ -112,7 +116,19 @@
         </tr>
       </tbody>
     </table>
-    <div>
-  </div>
-</div>
 
+    <div>
+      <div>
+        Queue progress:
+        <div class="progress" style="">
+          <div
+            class="progress-bar"
+            role="progressbar"
+            [ngStyle]="{ width: uploader.progress + '%' }"
+          ></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
