--- a/FrogDate.SPA/src/app/users/photos/photos.component.html
+++ b/FrogDate.SPA/src/app/users/photos/photos.component.html
@@ -6,7 +6,9 @@
       class="img-thumbnail p-1"
     />
     <div class="text-center">
-      <button type="button" class="btn btn-sm mr-1 btn-info">Main</button>
+      <button type="button" class="btn btn-sm mr-1"
+      (click)="setMainPhoto(photo)" [disabled]="photo.isMain"
+      [ngClass]="photo.isMain ? 'btn-success active' : 'btn-secondary' ">Main</button>
       <button type="button" class="btn btn-sm btn-danger">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -27,7 +29,7 @@
     </div>
   </div>
 </div>
->
+
 <div class="row">
   <div class="col-md-3">
     <h3>Select files</h3>
