--- a/FrogDate.SPA/src/app/users/user-list/user-edit/user-edit.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-edit/user-edit.component.html
@@ -205,7 +205,7 @@
         </tab>
         <tab heading="Picture gallery">
           <div>
-            <app-photos [photos]="user.photos"></app-photos>
+            <app-photos [photos]="user.photos" (getUserPhotoChange)="updateMainPhoto($event)"></app-photos>
           </div>
         </tab>
       </tabset>
