set BehaviorSubject communication

--- a/FrogDate.SPA/src/app/nav/nav.component.css
+++ b/FrogDate.SPA/src/app/nav/nav.component.css
@@ -1,4 +1,8 @@
 .dropdown-toggle, .dropdown-item {
     cursor:pointer
 }
-
+img {
+  max-height: 50px;
+  border: 2px white;
+  margin-right: 4px;
+}
