--- a/FrogDate.SPA/src/app/nav/nav.component.html
+++ b/FrogDate.SPA/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
         </ul>
         <div class="dropdown" dropdown *ngIf="loggedIn()">
           <span>
-            <img src="{{authService.currentUser.photoUrl}}">
+            <img src="{{photoUrl}}">
           </span>
 
 
