--- a/FrogDate.SPA/src/app/register/register/register.component.html
+++ b/FrogDate.SPA/src/app/register/register/register.component.html
@@ -1,14 +1,20 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign in!</h2>
   <hr>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Username" required name="username" [(ngModel)]="model.username">
+    <input type="text" class="form-control" placeholder="Username" formControlName="username">
   </div>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Password" required name="password" [(ngModel)]="model.password">
+    <input type="text" class="form-control" placeholder="Password" formControlName="password">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Confirm password" formControlName="confirmPassword">
   </div>
   <div class="form-group text-center">
     <button class="btn btn-success" type="submit">Register</button>
     <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
   </div>
 </form>
+
+<p>Value FORM: {{registerForm.value| json }}</p>
+<p>Value STATUS: {{registerForm.status| json }}</p>
