--- a/FrogDate.SPA/src/app/home/home/home.component.html
+++ b/FrogDate.SPA/src/app/home/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div *ngIf="!registerMode" style="text-align: center">
     <h1>Find your froggy part</h1>
-    <h1>Find your froggy part</h1>
+    <img class="homeimage" src="../../assets/homeIMG.jpeg">
     <p class="lead">
       Come to see your match. All you have to do, is register here!
     </p>
