register worked in API and SPA

--- a/FrogDate.SPA/src/app/nav/nav.component.html
+++ b/FrogDate.SPA/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
         </ul>
         <div class="dropdown" dropdown *ngIf="loggedIn()">
           <span>
-            <img src="{{photoUrl}}">
+            <img src="{{photoUrl || '../../../../assets/User_Icon.PNG'}}">
           </span>
 
 
