--- a/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="width: 18rem">
   <img
-    src="{{ user.photoUrl }}"
+    src="{{ user.photoUrl || '../assets/User_Icon.PNG'}}"
     class="card-img-top"
     alt="{{ user.username }}"
   />
