--- a/FrogDate.SPA/src/app/users/user-list/user-edit/user-edit.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-edit/user-edit.component.html
@@ -10,7 +10,7 @@
 <div class="d-flex p-2 bd-highlight">
   <div class="p-2 bd-highlight pictureslot">
     <div class="card">
-      <img class="card-img-top img-thumbnail" src="{{ photoUrl }}" />
+      <img class="card-img-top img-thumbnail" src="{{ photoUrl || '../../../../../../assets/User_Icon.PNG' }}" />
       <div class="card-body">
         <div>
           <strong>Name</strong>
