--- a/FrogDate.SPA/src/app/users/user-list/user-list.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-list.component.html
@@ -52,6 +52,16 @@
         </div>
         <button type="submit" class="btn btn-primary" style="margin-left: 10px;">Submit</button>
         <button type="button" class="btn btn-info" style="margin-left: 10px;" (click)="resetFilters()">Reset</button>
+
+
+        <!-- <button btnRadio="lastActive" class="btn btn-primary" [(ngModel)]="userParams.orderBy" type="button"
+        (click)="loadUsers()" style="margin-left: 10px;" name="orderBy">Last active</button>
+        <button btnRadio="created" class="btn btn-primary"  [(ngModel)]="userParams.orderBy" type="button"
+        (click)="loadUsers()" name="orderBy">Newest</button> -->
+        <div class="btn-group">
+          <button class="btn btn-primary" [(ngModel)]="userParams.orderBy"  btnRadio="lastActive" name="lastActive" >Last active</button>
+          <button class="btn btn-primary" [(ngModel)]="userParams.orderBy"  btnRadio="created" name="created" >Newest</button>
+       </div>
       </form>
 
 
