--- a/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-card/user-card.component.html
@@ -5,7 +5,7 @@
     alt="{{ user.username }}"
   />
   <ul class="list-inline text-center user-icons animate">
-    <li class="list-inline-item ">
+    <li class="list-inline-item" (click)="sendLike(user.id)">
       <button class="btn btn-warning">
         <svg
           xmlns="http://www.w3.org/2000/svg"
