--- a/FrogDate.SPA/src/app/users/user-list/user-messages/user-messages.component.html
+++ b/FrogDate.SPA/src/app/users/user-list/user-messages/user-messages.component.html
@@ -1,3 +1,55 @@
-<p *ngFor="let message of messages">
-  {{message.content}}
-</p>
+<div class="card">
+  <div CLASS="card-body">
+    <div *ngIf="messages?.length === 0">
+      No messages
+    </div>
+    <ul class="chat">
+       <li *ngFor="let message of messages">
+        <!--to me-->
+        <div *ngIf="message.senderId == recipientId">
+          <span class="chat-img float-left">
+            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderUsername}}" class="rounded-circle">
+          </span>
+          <div class="chat-body">
+            <div class="header">
+              <strong class="primary-front">{{message.senderUsername}}</strong>
+              <small class="text-muted float-right">
+                <span class="fa fa-clock-o">{{message.dateSent | timeAgo}}</span>
+              </small>
+            </div>
+            <p>{{message.content}}</p>
+          </div>
+        </div>
+
+        <!--to others-->
+        <div *ngIf="message.senderId != recipientId">
+          <span class="chat-img float-left">
+            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderUsername}}" class="rounded-circle">
+          </span>
+          <div class="chat-body">
+            <div class="header">
+              <small class="text-muted ">
+                <span class="fa fa-clock-o">{{message.dateSent | timeAgo}}</span>
+                <span  *ngIf="!message.isRead" class="text-danger">unread</span>
+                <span  *ngIf="message.isRead" class="text-success">readed {{message.dateRead | timeAgo}}</span>
+              </small>
+              <strong class="primary-front">{{message.senderUsername}}</strong>
+            </div>
+            <p>{{message.content}}</p>
+          </div>
+        </div>
+
+       </li>
+    </ul>
+  </div>
+  <div class="card-footer">
+    <form action="">
+      <div class="input-group">
+        <input type="text" class="form-control input-sm" placeholder="send private message">
+        <div class="input-group-append">
+          <button class="btn btn-primary">Send</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
